--- a/argocd/apps/dev/tekton/tekton-pipelines-kustomize/values.yaml
+++ b/argocd/apps/dev/tekton/tekton-pipelines-kustomize/values.yaml
@@ -14,16 +14,28 @@ data:
     1111111.dkr.ecr.us-east-1.amazonaws.com/ironbank/tektoncd/pipeline/cmd/controller:v0.63.0@sha256:4575e34a5aa27d571239136db2f28a757a773d2b8c18b176bef5facbe7081611
   eventsImage: 
     1111111.dkr.ecr.us-east-1.amazonaws.com/tekton-releases/github.com/tektoncd/pipeline/cmd/events:v0.63.0@sha256:69465472f6dc25571bedf0453c5c505dd542a58a8631e580e8cd3517372174f9
-  containerArgs:
-  - "-entrypoint-image"
-  - 1111111.dkr.ecr.us-east-1.amazonaws.com/ironbank/tektoncd/pipeline/cmd/entrypoint:v0.63.0@sha256:d2eca7694aa3b16c998811442eed5fec0c31f1f0bc5e53ba34d55b68e81b28a1
-  - "-nop-image"
-  - 1111111.dkr.ecr.us-east-1.amazonaws.com/ironbank/tektoncd/pipeline/cmd/nop:v0.63.0@sha256:765a67251189b5a8ef6588f8bb951a1a374527e444221252973269ea2d745591
-  - "-sidecarlogresults-image"
-  - 1111111.dkr.ecr.us-east-1.amazonaws.com/tekton-releases/github.com/tektoncd/pipeline/cmd/sidecarlogresults:v0.63.0@sha256:a2754af637302dcfe6604e0ae6e09492f1a79e61c5f20e220c5a72df1edeec0f
-  - "-workingdirinit-image"
-  - 1111111.dkr.ecr.us-east-1.amazonaws.com/tekton-releases/github.com/tektoncd/pipeline/cmd/workingdirinit:v0.63.0@sha256:1f7dacf8cf4e7f260ccb9c0c75c28c1df9bebcf9ab2c08c0087f97ae51bcb69f
-  - "-shell-image"
-  - 1111111.dkr.ecr.us-east-1.amazonaws.com/chainguard/busybox:v0.63.0@sha256:c061eec716564cbbb6b13c16228bcac7c552879a02c35fa8e50aed0ccbe3aef1
-  - "-shell-image-win"
-  - 1111111.dkr.ecr.us-east-1.amazonaws.com/powershell:nanoserverv0.63.0@sha256:b6d5ff841b78bdf2dfed7550000fd4f3437385b8fa686ec0f010be24777654d6
+  entryPointImage:
+    1111111.dkr.ecr.us-east-1.amazonaws.com/ironbank/tektoncd/pipeline/cmd/entrypoint:v0.63.0@sha256:d2eca7694aa3b16c998811442eed5fec0c31f1f0bc5e53ba34d55b68e81b28a1
+  nopImage:
+    1111111.dkr.ecr.us-east-1.amazonaws.com/ironbank/tektoncd/pipeline/cmd/nop:v0.63.0@sha256:765a67251189b5a8ef6588f8bb951a1a374527e444221252973269ea2d745591
+  sidecarLogResultsImage:
+    1111111.dkr.ecr.us-east-1.amazonaws.com/tekton-releases/github.com/tektoncd/pipeline/cmd/sidecarlogresults:v0.63.0@sha256:a2754af637302dcfe6604e0ae6e09492f1a79e61c5f20e220c5a72df1edeec0f
+  workingDirInitImage:
+    1111111.dkr.ecr.us-east-1.amazonaws.com/tekton-releases/github.com/tektoncd/pipeline/cmd/workingdirinit:v0.63.0@sha256:1f7dacf8cf4e7f260ccb9c0c75c28c1df9bebcf9ab2c08c0087f97ae51bcb69f
+  shellImage:
+    1111111.dkr.ecr.us-east-1.amazonaws.com/chainguard/busybox:v0.63.0@sha256:c061eec716564cbbb6b13c16228bcac7c552879a02c35fa8e50aed0ccbe3aef1
+  shellImageWin:
+    1111111.dkr.ecr.us-east-1.amazonaws.com/powershell:nanoserverv0.63.0@sha256:b6d5ff841b78bdf2dfed7550000fd4f3437385b8fa686ec0f010be24777654d6
+  # containerArgs:
+  # - "-entrypoint-image"
+  # - 1111111.dkr.ecr.us-east-1.amazonaws.com/ironbank/tektoncd/pipeline/cmd/entrypoint:v0.63.0@sha256:d2eca7694aa3b16c998811442eed5fec0c31f1f0bc5e53ba34d55b68e81b28a1
+  # - "-nop-image"
+  # - 1111111.dkr.ecr.us-east-1.amazonaws.com/ironbank/tektoncd/pipeline/cmd/nop:v0.63.0@sha256:765a67251189b5a8ef6588f8bb951a1a374527e444221252973269ea2d745591
+  # - "-sidecarlogresults-image"
+  # - 1111111.dkr.ecr.us-east-1.amazonaws.com/tekton-releases/github.com/tektoncd/pipeline/cmd/sidecarlogresults:v0.63.0@sha256:a2754af637302dcfe6604e0ae6e09492f1a79e61c5f20e220c5a72df1edeec0f
+  # - "-workingdirinit-image"
+  # - 1111111.dkr.ecr.us-east-1.amazonaws.com/tekton-releases/github.com/tektoncd/pipeline/cmd/workingdirinit:v0.63.0@sha256:1f7dacf8cf4e7f260ccb9c0c75c28c1df9bebcf9ab2c08c0087f97ae51bcb69f
+  # - "-shell-image"
+  # - 1111111.dkr.ecr.us-east-1.amazonaws.com/chainguard/busybox:v0.63.0@sha256:c061eec716564cbbb6b13c16228bcac7c552879a02c35fa8e50aed0ccbe3aef1
+  # - "-shell-image-win"
+  # - 1111111.dkr.ecr.us-east-1.amazonaws.com/powershell:nanoserverv0.63.0@sha256:b6d5ff841b78bdf2dfed7550000fd4f3437385b8fa686ec0f010be24777654d6
