--- a/argocd/apps/infra/renovate/values.yaml
+++ b/argocd/apps/infra/renovate/values.yaml
@@ -1,12 +1,14 @@
+env:
+  LOG_LEVEL: debug
 renovate:
   mendRnvAcceptTos: y
   mendRnvPlatform: github
   mendRnvEndPoint: https://api.github.com/
   existingSecret: renovate-secrets
   mendRnvCronJobSchedulerAll: "*/2 * * * *"
-  extraEnvVars:
-    - name: LOG_LEVEL
-      value: debug
+  # extraEnvVars:
+  #   - name: LOG_LEVEL
+  #     value: debug
   config: |
     module.exports = {
       "dependencyDashboard": true,
