--- a/argocd/apps/infra/renovate/kustomization.yaml
+++ b/argocd/apps/infra/renovate/kustomization.yaml
@@ -21,3 +21,8 @@ patches:
       - op: replace
         path: /spec/revisionHistoryLimit
         value: 3
+      - op: add
+        path: /spec/template/spec/containers/0/env/-
+        value:
+          name: LOG_LEVEL
+          value: debug
