--- a/argocd/apps/infra/authentik/app.yaml
+++ b/argocd/apps/infra/authentik/app.yaml
@@ -44,7 +44,7 @@ spec:
               ingressClassName: istio
               enabled: true
               hosts:
-                - authentik.k8s.yanello.net
+                - authentik.yanello.net
             replicas: 3
             resources:
               limits:
