--- a/argocd/apps/infra/istio/resources/external-vs.yaml
+++ b/argocd/apps/infra/istio/resources/external-vs.yaml
@@ -88,7 +88,7 @@ spec:
     - number: 30341
       name: http
       protocol: HTTP
-  resolution: DNS
+  resolution: STATIC
   location: MESH_EXTERNAL
 ---
 apiVersion: networking.istio.io/v1alpha3
@@ -181,7 +181,7 @@ spec:
     - number: 80
       name: http
       protocol: HTTP
-  resolution: DNS
+  resolution: STATIC
   location: MESH_EXTERNAL
 ---
 apiVersion: networking.istio.io/v1alpha3
