--- a/argocd/apps/infra/istio/resources/external-vs.yaml
+++ b/argocd/apps/infra/istio/resources/external-vs.yaml
@@ -72,7 +72,7 @@ spec:
   http:
     - route:
         - destination:
-            host: 192.168.1.18
+            host: opn.local
             port:
               number: 30341
 ---
