--- a/argocd/apps/infra/istio/resources/external-vs.yaml
+++ b/argocd/apps/infra/istio/resources/external-vs.yaml
@@ -167,7 +167,7 @@ spec:
   http:
     - route:
         - destination:
-            host: 192.168.1.41
+            host: iotawatt.lan
             port:
               number: 80
 ---
