--- a/argocd/apps/frigate/config.yaml
+++ b/argocd/apps/frigate/config.yaml
@@ -123,7 +123,7 @@ config: |
     retain:
       days: 1
       mode: all
-    events:
+    detections:
       retain:
         default: 7
         mode: active_objects
