--- a/argocd/apps/ytdl/deploy.yaml
+++ b/argocd/apps/ytdl/deploy.yaml
@@ -34,8 +34,12 @@ spec:
       initContainers:
         - name: wait-for-mongodb
           image: busybox:1.37@sha256:a5d0ce49aa801d475da48f8cb163c354ab95cab073cd3c138bd458fc8257fbf1
-          command: ['sh', '-c', 
-            'until nc -z ytdl-mongo-db 27017; do echo waiting for mongodb; sleep 2; done;']
+          command:
+            [
+              "sh",
+              "-c",
+              "until nc -z ytdl-mongo-db 27017; do echo waiting for mongodb; sleep 2; done;",
+            ]
       containers:
         - env:
             - name: ALLOW_CONFIG_MUTATIONS
@@ -129,6 +133,15 @@ spec:
       labels:
         io.kompose.service: ytdl-mongo-db
     spec:
+      affinity:
+        nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+              - matchExpressions:
+                  - key: kubernetes.io/arch
+                    operator: In
+                    values:
+                      - amd64
       containers:
         - image: mongo:4.4.29@sha256:52c42cbab240b3c5b1748582cc13ef46d521ddacae002bbbda645cebed270ec0
           name: ytdl-mongo-db
