--- a/argocd/apps/frigate/kustomization.yaml
+++ b/argocd/apps/frigate/kustomization.yaml
@@ -27,9 +27,9 @@ patches:
         spec:
           volumes:
           - $patch: replace
-            name: media
-            hostPath:
-              path: /zpool/k8s/frigate/media
+            - name: media
+              hostPath:
+                path: /zpool/k8s/frigate/media
               
 helmCharts:
     - name: frigate
