--- a/argocd/apps/frigate/kustomization.yaml
+++ b/argocd/apps/frigate/kustomization.yaml
@@ -17,23 +17,12 @@ patches:
     - op: add
       path: /spec/template/spec/hostNetwork
       value: true
-- target:
-    kind: Deployment
-    name: frigate
-  patch: |
-    apiVersion: apps/v1
-    kind: Deployment
-    metadata:
-      name: frigate
-    spec:
-      template:
-        spec:
-          volumes:
-          - $patch: replace
-            name: media
-            hostPath:
-              path: /zpool/k8s/frigate/media
-              
+    - op: replace
+      path: /spec/template/spec/volumes/6
+      value:
+        name: media
+        hostPath:
+          path: /zpool/k8s/frigate/media
 helmCharts:
     - name: frigate
       repo: https://blakeblackshear.github.io/blakeshome-charts/
