--- a/argocd/apps/frigate/kustomization.yaml
+++ b/argocd/apps/frigate/kustomization.yaml
@@ -18,11 +18,8 @@ patches:
       path: /spec/template/spec/hostNetwork
       value: true
     - op: replace
-      path: /spec/template/spec/volumes/6
-      value:
-        name: media
-        hostPath:
-          path: /zpool/k8s/frigate/media
+      path: /spec/template/spec/volumes/6/hostPath/path
+      value: /zpool/k8s/frigate/media
 helmCharts:
     - name: frigate
       repo: https://blakeblackshear.github.io/blakeshome-charts/
