--- a/argocd/apps/frigate/kustomization.yaml
+++ b/argocd/apps/frigate/kustomization.yaml
@@ -13,26 +13,26 @@ patches:
 - target:
     kind: Deployment
     name: frigate
-- patch: |-
+  patch: |-
     - op: add
       path: /spec/template/spec/hostNetwork
       value: true
-    - patch: |
-        apiVersion: apps/v1
-        kind: Deployment
-        metadata:
-          name: frigate
+- patch: |
+    apiVersion: apps/v1
+    kind: Deployment
+    metadata:
+      name: frigate
+    spec:
+      template:
         spec:
-          template:
-            spec:
-              hostNetwork: true
-              volumes:
-              - name: media
-                hostPath:
-                  path: /zpool/k8s/frigate/media
-      target:
-        kind: Deployment
-        name: frigate
+          hostNetwork: true
+          volumes:
+          - name: media
+            hostPath:
+              path: /zpool/k8s/frigate/media
+  target:
+    kind: Deployment
+    name: frigate
 helmCharts:
     - name: frigate
       repo: https://blakeblackshear.github.io/blakeshome-charts/
