frigate media path13

--- a/argocd/apps/frigate/kustomization.yaml
+++ b/argocd/apps/frigate/kustomization.yaml
@@ -17,6 +17,8 @@ patches:
     - op: add
       path: /spec/template/spec/hostNetwork
       value: true
+    - op: remove
+      path: /spec/template/spec/volumes/5
 - patch: |
     apiVersion: apps/v1
     kind: Deployment
@@ -25,7 +27,6 @@ patches:
     spec:
       template:
         spec:
-          hostNetwork: true
           volumes:
           - name: media
             hostPath:
