--- a/argocd/apps/argocd/cm.yaml
+++ b/argocd/apps/argocd/cm.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
-data:
-  kustomize.buildOptions: --enable-helm --enable-alpha-plugins --enable-exec
 kind: ConfigMap
 metadata:
   labels:
     app.kubernetes.io/part-of: argocd
   name: argocd-cm
-
+data:
+  kustomize.buildOptions: --enable-helm --enable-alpha-plugins --enable-exec
+  webhook.github.secret: $argocd-custom-secrets.webhook.github.secret
