--- a/argocd/apps/argocd/argocd-secrets.enc.yaml
+++ b/argocd/apps/argocd/argocd-secrets.enc.yaml
@@ -6,7 +6,7 @@ metadata:
         app.kubernetes.io/part-of: argocd
 type: Opaque
 stringData:
-    $webhook.github.secret: ENC[AES256_GCM,data:KB7DZVC7ytS3lAQZTTeSOehHUcQG6u0052RK0Im3W8tlUmzaFQwvWQ==,iv:tLqmH3kqwJCishh24uvItCed9gVLZa2D+gUrQV9gL+w=,tag:EzKbfKYnQxmOuDEa9qYNlg==,type:str]
+    webhook.github.secret: ENC[AES256_GCM,data:gXNTNJHj5rKxmKwJJBmdJ24nvBAtjsY/SJyIws/VuBDzUYGR6Frmew==,iv:zLKMGfax3ZLLrkrDsB6YswhbSNiYUZ1PIOyIVuY9EQM=,tag:RNzpoXtGihe6MCI6Mq1SXQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -22,8 +22,8 @@ sops:
             NE40enY1a3NZbVljYmpyNDRFSUZ5RTAKZZhEGkeVjJNT+kbv7xyxePum1RfP1OUw
             +RgCoroHJyrxhmPCmoG09BcR4GhWK6pvkXel+qronUrgHNq2BRydag==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-02-10T03:24:36Z"
-    mac: ENC[AES256_GCM,data:gB0mhtSwS7AT6XUuGKFYLKjs1EQC04KQdN+3iqjVKc0k+Y5o2R9Rfa6/mFJT7SDb08w3FGpY8Ep0JDFBddM1PW9qY0BtjsDYt2/Q5xmMUBlGvCsUJ51VbIJJpLahyN4sG7139TCR9tMtkULZCj9Wv2cNzweZbhNfy05EkooPvmM=,iv:GuvMunD3IRqPEhavlPZyRupNzYBGIoBmhRBVB1YGXIA=,tag:22LAlCJdc5sMUOZ/ehaL+Q==,type:str]
+    lastmodified: "2025-02-10T03:25:34Z"
+    mac: ENC[AES256_GCM,data:Hn5RTlLFmHV9/WXgRDQVhSDcrAZr19JViTmLZ+xEtm+CXDaPdxSXLnxBQJxDuLTxj217pRNXHOclTPSGchn0d5U305kFAI90SaUY86km2js4pVH9wkrU3EHMMp+e7Y5iTUetOGoGqXTScWJielGOGP1OXEmOKKkp+p4KiaWNvXc=,iv:Z2dOIFgaM6j+9vv/F5OnyC6OWDZbYRkjYJdKJPP1Cy8=,tag:Rg5336MJGRu7hhugQnj8qQ==,type:str]
     pgp: []
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
     version: 3.9.1
