--- a/argocd/apps/argocd/cm.yaml
+++ b/argocd/apps/argocd/cm.yaml
@@ -7,3 +7,4 @@ metadata:
 data:
   kustomize.buildOptions: --enable-helm --enable-alpha-plugins --enable-exec
   webhook.github.secret: $argocd-custom-secrets.webhook.github.secret
+  test: testing
