--- a/argocd/apps/recipes/sts.yaml
+++ b/argocd/apps/recipes/sts.yaml
@@ -123,6 +123,7 @@ spec:
     metadata:
       name: data
     spec:
+      storageClassname: nfs-storage
       accessModes:
       - ReadWriteOnce
       resources:
