--- a/argocd/apps/recipes/sts.yaml
+++ b/argocd/apps/recipes/sts.yaml
@@ -121,7 +121,7 @@ spec:
     metadata:
       name: data
     spec:
-      storageClassname: nfs-storage
+      storageClassName: nfs-storage
       accessModes:
       - ReadWriteOnce
       resources:
