--- a/argocd/apps/infra/istio/resources/external-vs.yaml
+++ b/argocd/apps/infra/istio/resources/external-vs.yaml
@@ -285,3 +285,36 @@ spec:
   resolution: STATIC
   location: MESH_EXTERNAL
 ---
+apiVersion: networking.istio.io/v1alpha3
+kind: VirtualService
+metadata:
+  name: opn-vs
+spec:
+  hosts:
+    - pikvm.yanello.net
+  gateways:
+    - istio-system/kube-gateway
+  http:
+    - route:
+        - destination:
+            host: pikvm.local
+            port:
+              number: 80
+---
+apiVersion: networking.istio.io/v1alpha3
+kind: ServiceEntry
+metadata:
+  name: opn-se
+  namespace: istio-system
+spec:
+  hosts:
+    - pikvm.local
+  endpoints:
+    - address: 192.168.1.9
+  ports:
+    - number: 80
+      name: http
+      protocol: HTTP
+  resolution: STATIC
+  location: MESH_EXTERNAL
+---
