--- a/argocd/apps/recipes/sts.yaml
+++ b/argocd/apps/recipes/sts.yaml
@@ -54,7 +54,7 @@ spec:
               key: postgresql-postgres-password
         - name: POSTGRES_DB
           value: recipes
-        image: docker.io/bitnami/postgresql:11.5.0-debian-9-r60
+        image: docker.io/bitnami/postgresql:14-debian-12
         imagePullPolicy: IfNotPresent
         livenessProbe:
           exec:
