test java deps2

--- a/argocd/apps/infra/renovate/values.yaml
+++ b/argocd/apps/infra/renovate/values.yaml
@@ -31,6 +31,9 @@ renovate:
       "kubernetes": {
         "fileMatch": ["deploy\.yaml$"],
       },
+      "gradle": {
+        "fileMatch": ["^build.grade$"],
+      },
       "packageRules": [
         {
           "matchDatasources": ["docker", "kustomize", "kubernetes"],
