test java deps3

--- a/argocd/apps/infra/renovate/values.yaml
+++ b/argocd/apps/infra/renovate/values.yaml
@@ -32,7 +32,7 @@ renovate:
         "fileMatch": ["deploy\.yaml$"],
       },
       "gradle": {
-        "fileMatch": ["^build.grade$"],
+        "fileMatch": ["^build.gradle$"],
       },
       "packageRules": [
         {
