--- a/argocd/apps/infra/renovate/vs.yaml
+++ b/argocd/apps/infra/renovate/vs.yaml
@@ -10,7 +10,7 @@ spec:
   http:
   - route:
     - destination:
-        host: renovate
+        host: mend-renovate-ce
         port:
           number: 8080
 # ---
