--- a/argocd/apps/infra/renovate/values.yaml
+++ b/argocd/apps/infra/renovate/values.yaml
@@ -4,6 +4,7 @@ renovate:
   mendRnvEndPoint: https://api.github.com/
   mendRnvWebhookURL: https://renovate.yanello.net/webhook
   existingSecret: renovate-secrets
+  mendRnvReportingEnabled: "true"
   mendRnvCronJobSchedulerAll: "*/2 * * * *"
   extraEnvVars:
     - name: LOG_LEVEL
@@ -74,3 +75,6 @@ affinity:
               operator: In
               values:
                 - amd64
+
+service:
+  port: 8080
