--- a/argocd/apps/recipes/secrets.yaml
+++ b/argocd/apps/recipes/secrets.yaml
@@ -4,9 +4,12 @@ metadata:
     name: recipes
 type: Opaque
 stringData:
-    postgresql-password: ENC[AES256_GCM,data:FNml9tEYpd7hcQ8F06CqL13Q8VeZw/tZZ1RHDGe5RFE=,iv:nhCLVj6WIhkcBmeieNS+vIH+oTlrZPzJ0vXQZol0Zm0=,tag:NwaU9XXz9ln1aCKsdRgWvw==,type:str]
-    postgresql-postgres-password: ENC[AES256_GCM,data:trJl1L51R4NrUlRgiNM5wBF70Ukwo9OCeRJ9x05uk3w=,iv:Utg6yumT4rPhozDr6cBuX7NLxsjtbv5+1/TtoXILxR0=,tag:/NJe9/QKQyqM8DTzMlFgIQ==,type:str]
-    secret-key: ENC[AES256_GCM,data:X7vkLZh2JcHEK/orAcJK2FO983FxELGVsIFRxvKOidU=,iv:0xyNISXXsv0eHvw3YUEU+70wXr05ChmW9DTdIVao6UQ=,tag:ggxVS4VhpghQFdl/lfBZhg==,type:str]
+    POSTGRES_PASSWORD: ENC[AES256_GCM,data:pI2EXC2gdyw3c0bmODKFjNWTngYFW2dMcxaV,iv:8RRjZy0C/urIAja6yLozvfrgSljN2k5HtXESKx+dn+E=,tag:zUX2OU5lFuDL72NLxXwOPQ==,type:str]
+    POSTGRES_POSTGRES_PASSWORD: ENC[AES256_GCM,data:bWJtILU99ddAIXj0+DWzlD+FVIAeYHcO1vwYNv1o,iv:l+XDC0ZGOzVQUdd2kqpNozM1M/SaIpi6zkqmTrSqVk0=,tag:ZlE5dt5UbgapMqQQecM8gQ==,type:str]
+    POSTGRES_USER: ENC[AES256_GCM,data:TjNXm/ypig==,iv:0DyMSJUL+5lqDy6Q2Sj/os7t8IoG42+psNvNhK4VZQU=,tag:waeKunCoUsCxit/Q+Vg82w==,type:str]
+    POSTGRES_DB: ENC[AES256_GCM,data:sZIOgzIAcw==,iv:/PCa9MS8SSDSlSwV/oP/Yx6HzlCHv8METXN7dqv1G+U=,tag:gCPx/sro7eHvkDr0IcZRyQ==,type:str]
+    POSTGRES_PORT: ENC[AES256_GCM,data:16N9nw==,iv:d3fnxKDhv2U3RyKGEP8CdFHzUF2WLQDETtXbsLBIybk=,tag:DkWIGpFdmN5V1gKxvxjIuQ==,type:str]
+    SECRET_KEY: ENC[AES256_GCM,data:Rg9XpVB1BS7J+FLkK8cd/caQB54oncOAi5ROZMes,iv:La1v6DgA1TUsR5hqOdG5LD7Hcza4p9l/AIMdLxhz5zM=,tag:oU/zfisgZHVVdTL9+tOfJA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -22,8 +25,8 @@ sops:
             NE40enY1a3NZbVljYmpyNDRFSUZ5RTAKZZhEGkeVjJNT+kbv7xyxePum1RfP1OUw
             +RgCoroHJyrxhmPCmoG09BcR4GhWK6pvkXel+qronUrgHNq2BRydag==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-02-10T03:41:47Z"
-    mac: ENC[AES256_GCM,data:Lc8c1XLxwWJAsphdPTR0kKHWHs4ueCZIIkUwja8+rZLRjki5PhS0GOVKWOI/S7U7P/KPeJ+fr8ZJk1MbuiLr7wyJiir1fQASPANBBj3XHjxP75FqnUTI4rtUXFzZr8AdCkw0EN5qNN+fjZxnW1UXVjgB/Qv6FNfXD3QxvB1I7H4=,iv:DIq6LndiTeLgChxIZYuiIRvHXUpQ2MXrnDcBCp7dNm4=,tag:pR+iISlwFA40Ywovm6SSpA==,type:str]
+    lastmodified: "2025-02-10T22:27:58Z"
+    mac: ENC[AES256_GCM,data:ECljDS23ERiUPF3cU9T+saCJwl6nhbd+GAYabSrHy/wUmvMgQpRRotNgCkO1k/W1hJrfISLMpwMDox1kOHRCgiB2X/RYIn1VyO1DyiB6KF3Ko5iEX3dO33SfVWiaQ6H/sGVd60+8SXBAdT3IeQdjqsCkNXoYjf5I5N7LITnsqHg=,iv:yl/oIW/uyN1gEIOYzgQcLpPxcSY7qXP6lndvu8y79ts=,tag:0FLoAV1ZZobfknMKQznpcw==,type:str]
     pgp: []
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
     version: 3.9.1
