--- a/argocd/apps/recipes/sts.yaml
+++ b/argocd/apps/recipes/sts.yaml
@@ -41,7 +41,7 @@ spec:
         - name: PGDATA
           value: /bitnami/postgresql/data
         - name: POSTGRES_USER
-          value: postgres
+          value: recipes
         - name: POSTGRESQL_PASSWORD
           valueFrom:
             secretKeyRef:
