--- a/argocd/apps/recipes/deploy.yaml
+++ b/argocd/apps/recipes/deploy.yaml
@@ -39,7 +39,7 @@ spec:
           - name: POSTGRES_PORT
             value: "5432"
           - name: POSTGRES_USER
-            value: postgres
+            value: recipes
           - name: POSTGRES_DB
             value: recipes
           - name: POSTGRES_PASSWORD
@@ -165,11 +165,11 @@ spec:
             value: recipes-postgresql
           - name: POSTGRES_PORT
             value: "5432"
-          - name: POSTGRESQL_USER
+          - name: POSTGRES_USER
             value: recipes
-          - name: POSTGRESQL_DB
+          - name: POSTGRES_DB
             value: recipes
-          - name: POSTGRESQL_PASSWORD
+          - name: POSTGRES_PASSWORD
             valueFrom:
               secretKeyRef:
                 name: recipes
