--- a/argocd/apps/recipes/deploy.yaml
+++ b/argocd/apps/recipes/deploy.yaml
@@ -54,21 +54,21 @@ spec:
           requests:
             cpu: 250m
             memory: 64Mi
-        command:
-        - sh
-        - -c
-        - |
-          set -e
-          source venv/bin/activate
-          echo "Updating database"
-          python manage.py migrate
-          python manage.py collectstatic_js_reverse
-          python manage.py collectstatic --noinput
-          echo "Setting media file attributes"
-          chown -R 65534:65534 /opt/recipes/mediafiles
-          find /opt/recipes/mediafiles -type d | xargs -r chmod 755
-          find /opt/recipes/mediafiles -type f | xargs -r chmod 644
-          echo "Done"
+        # command:
+        # - sh
+        # - -c
+        # - |
+        #   set -e
+        #   source venv/bin/activate
+        #   echo "Updating database"
+        #   python manage.py migrate
+        #   python manage.py collectstatic_js_reverse
+        #   python manage.py collectstatic --noinput
+        #   echo "Setting media file attributes"
+        #   chown -R 65534:65534 /opt/recipes/mediafiles
+        #   find /opt/recipes/mediafiles -type d | xargs -r chmod 755
+        #   find /opt/recipes/mediafiles -type f | xargs -r chmod 644
+        #   echo "Done"
         securityContext:
           runAsUser: 0
         volumeMounts:
