--- a/argocd/apps/recipes/sts.yaml
+++ b/argocd/apps/recipes/sts.yaml
@@ -7,6 +7,7 @@ metadata:
   name: recipes-postgresql
 spec:
   replicas: 1
+  revisionHistoryLimit: 3
   selector:
     matchLabels:
       app: recipes
